--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,37 +6,45 @@ package:
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/ds_store-{{ version }}.tar.gz
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
   sha256: c27d413caf13c19acb85d75da4752673f1f38267f9eb6ba81b3b5aa99c2d207c
 
 build:
-  script: {{ PYTHON }} -m pip install . -vv
-  number: 1
+  number: 2
+  noarch: python
+  script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
   entry_points:
     - ds_store = ds_store.__main__:main
 
 requirements:
   host:
+    - python >=3.8
     - pip
-    - pytest
-    - python
+    - setuptools
   run:
+    - python >=3.8
     - mac_alias >=2.0.1
-    - python
 
 test:
   imports:
     - ds_store
-  commands:
-    - pip check
   requires:
     - pip
+    - pytest
+    - pytest-cov
+    - tox
+  source_files:
+    - tests
+  commands:
+    - pip check
+    - tox -e py
 
 about:
-  home: http://alastairs-place.net/projects/ds_store
+  home: https://github.com/dmgbuild/ds_store
   doc_url: https://ds-store.readthedocs.io/en/latest/
   summary: Manipulate Finder .DS_Store files from Python
   license: MIT
+  license_family: MIT
   # Awaiting upstream push to PyPI for LICENSE to end up in SDist
   license_file:
     - LICENSE
